--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,7 +14,6 @@
 
 .login_page{
     background-image: url("https://images.pexels.com/photos/1000445/pexels-photo-1000445.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260");  
-    background-position: center center;
     background-size: 100%;
   }
 
